syntax = "proto3";

package info;

option go_package = "github.com/manhrev/IOT/server/pkg/api;info";

import "google/protobuf/timestamp.proto";

service Info {
    // Group
    rpc CreateGroup(CreateGroupRequest) returns (CreateGroupReply);
    rpc ListGroup(ListGroupRequest) returns (ListGroupReply);
    rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupReply);

    // Feed
    rpc AddFeedsToGroup(AddFeedsToGroupRequest) returns (AddFeedsToGroupReply);
    rpc CreateFeed(CreateFeedRequest) returns (CreateFeedReply);
    rpc GetFeed(GetFeedRequest) returns (GetFeedReply);
    rpc ListFeed(ListFeedRequest) returns (ListFeedReply);
    rpc DeleteFeed(DeleteFeedRequest) returns (DeleteFeedReply);

    // Data
    rpc CreateData(CreateDataRequest) returns (CreateDataReply);
    rpc ListData(ListDataRequest) returns (ListDataReply);
}

message CreateGroupRequest {
    string group_name = 1;
}

message CreateGroupReply {}

message ListGroupRequest {}

message ListGroupReply {
    repeated GroupInfo info = 1;
}

message GroupInfo {
    int64 group_id = 1;
    string group_name = 2;
    repeated string feed_list = 3;
    google.protobuf.Timestamp created_at = 4;
}

message DeleteGroupRequest{
    string group_name = 1;
}

message DeleteGroupReply {}

message CreateFeedRequest {
    string feed_name = 2;
}

message CreateFeedReply {}

message FeedInfo {
    int64 feed_id = 1;
    string feed_name = 2;
    google.protobuf.Timestamp created_at = 3;
}

message GetFeedRequest {
    string feed_name = 1;
}

message GetFeedReply {
    FeedInfo info = 1;
}

message ListFeedRequest {}

message ListFeedReply {
    repeated FeedInfo feeds = 1;
}

message DeleteFeedRequest {
    string feed_name = 1;
}

message DeleteFeedReply {}

message AddFeedsToGroupRequest {
    string group_name = 1;
    repeated string feed_names = 2;
}

message AddFeedsToGroupReply {}

message CreateDataRequest {
    string feed_name = 1;
    int64 value = 2;
    google.protobuf.Timestamp recorded_at = 3;
}

message CreateDataReply {}

message ListDataRequest {
    string feed_name = 1;
}

message Data {
    int64 value = 1;
    google.protobuf.Timestamp recorded_at = 3;
}

message ListDataReply {
    repeated Data list_data = 1;
}